FindBugs, Round 1, more to come FlashGot: fixes #169 Request,Cookies: moved parseCookies to Cookies Auth: removed, no longer needed
git-svn-id: svn://svn.jdownloader.org/jdownloader/trunk@7245 ebf7c1c2-ba36-0410-9fe8-c592906822b4